--- a/source/app/configuracion/configuracion.html
+++ b/source/app/configuracion/configuracion.html
@@ -1,16 +1,16 @@
-<section class="SectionPerfilC" style="text-align:centrer;">
+<section class="SectionPerfil" style="text-align:centrer;">
   <article class="FormPerfil" style="display:block;">
 
-    <h1 class="ConfiC" >Configuración</h1>
+    <h1 class="Confi" >Configuración</h1>
 
-     <figure class="FormPerfil-imgC"  >
-       <img class="messegerC" src="../../img/messenger.jpg" style="width:100%"/>
+     <figure class="FormPerfil-img"  >
+       <img class="messeger" src="../../img/messenger.jpg" style="width:100%"/>
      </figure>
 
-  <form class="usuarioPerfilC" name="formConfig">
-    <div class="infoPersonalC">
+  <form class="usuarioPerfil" name="formConfig">
+    <div class="infoPersonal">
 
-    <label class="InfoC" >Información personal</label><br>
+    <label class="Info" >Información personal</label><br>
 
     <md-input-container class="md-block">
     <label>Nombre</label>
@@ -58,10 +58,10 @@
     </div>
     <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
 
-  <md-button ng-click="vm.update()" ng-disabled="formConfig.$invalid" class="buttomC"
+  <md-button ng-click="vm.update()" ng-disabled="formConfig.$invalid" class="buttom"
   class="md-raised" style="background:#4FC3F7; color:white;">Guardar</md-button>
 
-    <md-button ng-disabled="formConfig.$invalid" href="/" class="buttom1C" style="background:#01579B;color:white;">Cancelar</md-button>
+    <md-button ng-disabled="formConfig.$invalid" href="/" class="buttom1" style="background:#01579B;color:white;">Cancelar</md-button>
 
     </section><br>
   </form>
