--- a/source/app/Usuarios/usuariosList/usuariosList.html
+++ b/source/app/Usuarios/usuariosList/usuariosList.html
@@ -15,7 +15,7 @@
 
 <section class="SectionTab">
   <div class="tabla" data-example-id="simple-table">
-    <h1 style="padding-bottom:.5em;border-bottom:2px solid black; display:inline-block; font-size:20px">Medico</h1><br>
+    <h1 style="padding-bottom:.5em;border-bottom:2px solid black; display:inline-block; font-size:20px; width:100%;">Medico</h1><br>
     <table class="table table-bordered">
       <thead style="background:black;">
         <!-- <tr><th>Foto</th><th>Nombre</th><th>Apellidos</th></tr> -->
