--- a/source/app/bienvenido/bienvenido.html
+++ b/source/app/bienvenido/bienvenido.html
@@ -5,13 +5,13 @@
   <div class="container" style="display:inline-block;margin-left:3em;">
     <div class="row">
       <div class="col-xs-12">
-        <h2 class="sectionTitle">¡Bienvenido a Pocket Medic!</h2>
+        <h2 class="sectionTitle">¡Bienvenidos a Pocket Medic!</h2>
       </div>
     </div>
     <div class="Portafolio">
-      <div class="row IdentityMajor-container" style="display:flex;justify-content:space-between;margin:auto;">
+      <div class="row">
         <div class="col-md-4 portafoliocontainer">
-          <h3 class="portafoliocontainer-Title">Bienvenid@</h3>
+          <h3 class="portafoliocontainer-Title">Bienvenido</h3>
           <p class="text">Ahora puedes disfrutar de los servicios que te ofrecemos en nuestra plataforma</p>
         </div>
         <div class="col-md-4 portafoliocontainer">
