--- a/source/app/perfil/perfil.html
+++ b/source/app/perfil/perfil.html
@@ -13,37 +13,34 @@
     <div class="infoPersonal">
 
     <md-input-container class="name">
-    <label>Nombre</label>
-      <input required md-no-asterisk name="nombres" name="apellidos" ng-model="vm.usuario.nombres + vm.usuario.apellidos"  ng-disabled="true";>
+    <label  style="color:black;">Nombre</label>
+      <input  style="color:black;" required md-no-asterisk name="nombres" name="apellidos" ng-model="vm.usuario.nombres + vm.usuario.apellidos"  ng-disabled="true";>
 
      </md-input-container>
-     <md-input-container class="especial" >
-     <label>Especialidad</label>
-    <input required md-no-asterisk name="Especialidad"  ng-model="vm.titulosycertificados" ng-disabled="true ;">
+     <md-input-container class="especial">
+     <label  style="color:black;">Especialidad</label>
+    <input  style="color:black;"  required md-no-asterisk name="Especialidad"  ng-model="vm.titulosycertificados" ng-disabled="true ;">
     </md-input-container>
   </div> <br> <br>
 
-
-
-
       <div>
-      <label  class="Infocontacto" > <p class="labeltext"> Información de contacto </p></label><br>
+      <label  style="color:black;" class="Infocontacto"> <p class="labeltext"> Información de contacto </p></label><br>
 
   <md-input-container class="tel">
-    <label>Teléfono</label>
-    <input required md-no-asterisk name="telefono" ng-model="vm.usuario.telefono" ng-disabled="true";>
+    <label  style="color:black;">Teléfono</label>
+    <input  style="color:black;" required md-no-asterisk name="telefono" ng-model="vm.usuario.telefono" ng-disabled="true";>
   </md-input-container>
 
 
 
       <md-input-container class="direc">
-        <label>Dirección</label>
-        <input required md-no-asterisk name="direccion" ng-model="vm.usuario.direccion" ng-disabled="true";>
+        <label  style="color:black;" >Dirección</label>
+        <input  style="color:black;" required md-no-asterisk name="direccion" ng-model="vm.usuario.direccion" ng-disabled="true";>
       </md-input-container>
 
       <md-input-container class="correo">
-        <label>Email</label>
-        <input type="email" ng-pattern="/^.+@.+\..+$/" required md-no-asterisk name="email" ng-model="vm.usuario.email" ng-disabled="true";>
+        <label  style="color:black;">Email</label>
+        <input  style="color:black;" type="email" ng-pattern="/^.+@.+\..+$/" required md-no-asterisk name="email" ng-model="vm.usuario.email" ng-disabled="true";>
       </md-input-container>
 
     </md-input-container> <br>
