--- a/source/app/Usuarios/consultasList/consultasList.html
+++ b/source/app/Usuarios/consultasList/consultasList.html
@@ -1,6 +1,6 @@
 <section class="SectionTab">
   <div class="tabla" data-example-id="simple-table">
-    <h1 style="padding-bottom:.5em;border-bottom:2px solid black; display:inline-block; font-size:20px">Consultas</h1><br>
+    <h1 class="title-consulta">Consultas</h1><br>
     <table class="table table-bordered">
       <thead style="background:black;">
         <!-- <tr><th>Foto</th><th>Nombre</th><th>Apellidos</th></tr> -->
