--- a/source/app/configuracion/configuracion.html
+++ b/source/app/configuracion/configuracion.html
@@ -49,12 +49,12 @@
     <label>Email</label>
     <input type="email" ng-pattern="/^.+@.+\..+$/" required md-no-asterisk name="email" ng-model="vm.usuario.email" style="color:black;">
   </md-input-container>
-  <section>
+  <!-- <section>
     <h1 style="color:#2271b3;">Inhabilitar cuenta</h1>
     <p>Tenga presente que si usted deshabilita su cuenta, esta quedara inactiva hasta que vuelva a iniciar sesión con ella</p>
     <!-- <md-button class="md-raised md-primary" style="padding:0 10em;">Inhabilitar</md-button> -->
-    <md-checkbox  style="color:#0000;font-weight:bold;" class="md-primary" name="TerminosCondiciones" id="chekched" ng-model="vm.usuario.estado" >Inhabilitar Mi Cuenta</md-checkbox>
-  </section>
+    <!-- <md-checkbox  style="color:#0000;font-weight:bold;" class="md-primary" name="TerminosCondiciones" id="chekched" ng-model="vm.usuario.estado" >Inhabilitar Mi Cuenta</md-checkbox>
+  </section> --> 
     </div>
     <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
 
