--- a/source/index.html
+++ b/source/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="lib/angular-material/angular-material.css" />
     <link rel="icon" type="image/png" href="/img/negativo_let.png" />
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
+    <link href="bower_components/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
+
 
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="/app/ambiental/ambiental.css">
     <link rel="stylesheet" href="/app/admin/admin.css">
+    <link rel="stylesheet" href="/app/ambiental/ambiental.css">
     <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/configuracion/configuracion.css">
     <link rel="stylesheet" href="/app/footer/footer.css">
@@ -28,13 +30,13 @@
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
+    <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
+    <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
-    <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
-    <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
@@ -71,6 +73,7 @@
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
+    <script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/moment/min/moment.min.js"></script>
     <script type="text/javascript" src="lib/angular-ui-calendar/src/calendar.js"></script>
@@ -81,21 +84,20 @@
     <!-- inject:js -->
     <script src="/app/app.module.js"></script>
     <script src="/app/templates.js"></script>
-    <script src="/app/Usuarios/app.module.js"></script>
-    <script src="/app/ambiental/app.directivas.js"></script>
-    <script src="/app/ambiental/app.module.js"></script>
-    <script src="/app/ambiental/app.route.js"></script>
     <script src="/app/admin/app.controller.js"></script>
     <script src="/app/admin/app.directivas.js"></script>
     <script src="/app/admin/app.module.js"></script>
     <script src="/app/admin/app.route.js"></script>
     <script src="/app/admin/app.services.js"></script>
+    <script src="/app/ambiental/app.directivas.js"></script>
+    <script src="/app/ambiental/app.module.js"></script>
+    <script src="/app/ambiental/app.route.js"></script>
     <script src="/app/bienvenido/app.directive.js"></script>
     <script src="/app/bienvenido/app.module.js"></script>
     <script src="/app/bienvenido/app.route.js"></script>
-    <script src="/app/config/app.constantes.js"></script>
     <script src="/app/calendario/app.module.js"></script>
     <script src="/app/calendario/app.route.js"></script>
+    <script src="/app/config/app.constantes.js"></script>
     <script src="/app/configuracion/app.directive.js"></script>
     <script src="/app/configuracion/app.module.js"></script>
     <script src="/app/configuracion/app.route.js"></script>
@@ -135,6 +137,12 @@
     <script src="/app/registro/app.services.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
+    <script src="/app/Usuarios/app.module.js"></script>
+    <script src="/app/calendario/calendario-list/calendario-list.controller.js"></script>
+    <script src="/app/calendario/calendario-list/calendario-list.directive.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
@@ -163,11 +171,6 @@
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.controller.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.directive.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 </body>
