--- a/source/app/header/header.html
+++ b/source/app/header/header.html
@@ -23,8 +23,8 @@
               {{vm.getCurrentUser()}} <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-              <li><a href="#/perfil/{{vm.getIdCurrentUser()}}">Mi Perfil</a></li>
-              <li><a href="#/usuariosList" ng-show="!vm.isMedic()">Médicos</a></li>
+              <li><a  class="fa fa-user " href="#/perfil/{{vm.getIdCurrentUser()}}">Mi Perfil</a></li>
+              <li><a class="fa fa-user-md "  href="#/usuariosList" ng-show="!vm.isMedic()">Médicos</a></li>
               <li><a href="#/consultasList">Lista de consultas</a></li>
               <li><a href="#/configuser/{{vm.getIdCurrentUser()}}">Configuración</a></li>
               <li role="separator" class="divider"></li>
@@ -32,6 +32,12 @@
             </ul>
           </div>
         </ul>
+        <div ng-show="vm.isAuthenticated()" onclick="showNotification()" class="Notifi">
+  <span class="fa fa-bell-o fa-3x iconoo-notification pulse"></span>
+    <div id="Notification" class="Notification z-depth-1" style="display:none;">
+      <p class="NotificationLabel">Tienes una nueva cita</p>
+    </div>
+</div>
 
 
 <!-- <div ng-controller="AppCtrl" layout="column" style="height:500px;" ng-cloak style="width:20%;display:inline-block;">
