--- a/source/index.html
+++ b/source/index.html
@@ -10,11 +10,9 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/angular-material/angular-material.css" />
-    <link rel="icon" type="image/png" href="/img/negativo_let.png" />
-    <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
-    <link href="bower_components/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
-
-
+    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.min.css" />
+    <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/app/admin/admin.css">
@@ -24,19 +22,20 @@
     <link rel="stylesheet" href="/app/footer/footer.css">
     <link rel="stylesheet" href="/app/header/estilos.css">
     <link rel="stylesheet" href="/app/header/header.css">
+    <link rel="stylesheet" href="/app/inicio/animations.css">
     <link rel="stylesheet" href="/app/inicio/inicio.css">
-    <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/perfil/perfil.css">
+    <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
-    <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
-    <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
+    <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
+    <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
@@ -73,17 +72,17 @@
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
-    <script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
-    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/moment/min/moment.min.js"></script>
-    <script type="text/javascript" src="lib/angular-ui-calendar/src/calendar.js"></script>
-    <script type="text/javascript" src="lib/fullcalendar/dist/fullcalendar.min.js"></script>
+    <script src="lib/ng-table/dist/ng-table.min.js"></script>
+    <script src="lib/moment/moment.js"></script>
+    <script src="lib/fullcalendar/dist/fullcalendar.js"></script>
+    <script src="lib/angular-ui-calendar/src/calendar.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js js/app.min.js -->
     <!-- inject:js -->
     <script src="/app/app.module.js"></script>
     <script src="/app/templates.js"></script>
+    <script src="/app/Usuarios/app.module.js"></script>
     <script src="/app/admin/app.controller.js"></script>
     <script src="/app/admin/app.directivas.js"></script>
     <script src="/app/admin/app.module.js"></script>
@@ -109,19 +108,21 @@
     <script src="/app/header/app.directive.js"></script>
     <script src="/app/header/app.module.js"></script>
     <script src="/app/header/app.router.js"></script>
+    <script src="/app/header/notificacion.js"></script>
     <script src="/app/header/showpanels.js"></script>
+    <script src="/app/inicio/animation.js"></script>
     <script src="/app/inicio/app.controller.js"></script>
     <script src="/app/inicio/app.directivas.js"></script>
     <script src="/app/inicio/app.module.js"></script>
     <script src="/app/inicio/app.route.js"></script>
-    <script src="/app/login/app.controller.js"></script>
-    <script src="/app/login/app.directive.js"></script>
-    <script src="/app/login/app.module.js"></script>
-    <script src="/app/login/app.router.js"></script>
     <script src="/app/perfil/app.controller.js"></script>
     <script src="/app/perfil/app.directive.js"></script>
     <script src="/app/perfil/app.module.js"></script>
     <script src="/app/perfil/app.route.js"></script>
+    <script src="/app/login/app.controller.js"></script>
+    <script src="/app/login/app.directive.js"></script>
+    <script src="/app/login/app.module.js"></script>
+    <script src="/app/login/app.router.js"></script>
     <script src="/app/portafolio/app.directivas.js"></script>
     <script src="/app/portafolio/app.module.js"></script>
     <script src="/app/portafolio/app.route.js"></script>
@@ -137,12 +138,6 @@
     <script src="/app/registro/app.services.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
-    <script src="/app/Usuarios/app.module.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.controller.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.directive.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
-    <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
@@ -171,6 +166,11 @@
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
+    <script src="/app/calendario/calendario-list/calendario-list.controller.js"></script>
+    <script src="/app/calendario/calendario-list/calendario-list.directive.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 </body>
