resposive pagina de inicio

--- a/source/app/inicio/inicio.html
+++ b/source/app/inicio/inicio.html
@@ -1,52 +1,50 @@
 <body>
   <div class="Inicio-image">
-     <div style="">
-       <h1 class="HeaderAbout-Descripcion" >Pocket Medic</h1>
-         <p class="HeaderAbout-Descripcion-p">Agilizamos los procesos de las consultas médicas que permitirá a los pacientes realizar sus consultas
+    <div style="">
+      <h1 class="HeaderAbout-Descripcion" >Pocket Medic</h1>
+        <p class="HeaderAbout-Descripcion-p">Agilizamos los procesos de las consultas médicas que permitirá a los pacientes realizar sus consultas
          desde la comodidad de su hogar.</p>
          <!-- <img src="resources/images/LOGO.png" class="HeaderAbout-img"/> -->
          <!--button class="Buttom-slider" href="#/registro">Registrate</button>-->
-     </div>
+    </div>
  </div>
  <div class="altWrap">
-   <aside class="heal">
-     <img class="care1" src="../../img/angelica.jpg" alt="" />
-   </aside>
- 		<div class="container" style="display: inline-block; margin-left: 5em;">
- 			<div class="row">
+  <aside class="heal">
+    <img class="care1" src="../../img/angelica.jpg" alt="" />
+  </aside>
+ 	  <div class="container">
+ 		  <div class="row">
  				<div class="col-xs-12">
  					<h2 class="sectionTitle">¿Quienes somos?</h2>
- 				</div>
+ 				</div><br>
  			</div>
-       <div class="Portafolio">
-         <div class="row IdentityMajor-container">
-           <div class="col-md-4 portafoliocontainer">
-             <h3 class="portafoliocontainer-Title">Misión</h3>
+      <div class="Portafolio">
+        <div class="row IdentityMajor-container">
+          <div class="col-md-4 portafoliocontainer">
+            <h3 class="portafoliocontainer-Title">Misión</h3>
              <p class="text">Nuestra mision es ser conocidos por nuestro liderazgo atravez de nuestra pasion,
                nuestro respeto por la diversidad y nuestro compromiso para el crecimiento personal tanto en su carrera como en lo personal.</p>
-           </div>
-           <div class="col-md-4 portafoliocontainer">
-             <h3 class="portafoliocontainer-Title">Visión</h3>
+          </div><br>
+          <div class="col-md-4 portafoliocontainer">
+            <h3 class="portafoliocontainer-Title">Visión</h3>
              <p class="text">Pocket Medic, tiene como vision que en el 2020 podamos extendernos mundialmente,
                haciendo que el servicio de la salud mejore y tengamos una mejor atencion al cliente,
                asi mismo agilizando los procesos de las consultas medicas.</p>
-             </div>
-
-             <div class="col-md-4 portafoliocontainer">
-                 <h3 class="portafoliocontainer-Title">Valores</h3>
-                 <p class="text"> Hemos identificado un conjunto de valores tales como:
+          </div><br>
+          <div class="col-md-4 portafoliocontainer">
+            <h3 class="portafoliocontainer-Title">Valores</h3>
+              <p class="text"> Hemos identificado un conjunto de valores tales como:
                    El Respeto
                    El Compromiso con Nuestro Trabajo y con las demas personas
                    La Responsabilidad
                    La Honestidad
                    La Solidaridad
                    Pasion comprometidos por la salud.</p>
-                 </div>
-               </div>
-               </div>
-           </div>
-
-       </div>
+          </div><br>
+        </div>
+      </div>
+    </div>
+</div>
        <!-- <div class="Elegirnos">
          <div class="container">
              <div class="row">
