--- a/source/index.html
+++ b/source/index.html
@@ -20,18 +20,18 @@
     <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/configuracion/configuracion.css">
     <link rel="stylesheet" href="/app/footer/footer.css">
+    <link rel="stylesheet" href="/app/inicio/inicio.css">
     <link rel="stylesheet" href="/app/header/estilos.css">
     <link rel="stylesheet" href="/app/header/header.css">
-    <link rel="stylesheet" href="/app/inicio/animations.css">
-    <link rel="stylesheet" href="/app/inicio/inicio.css">
-    <link rel="stylesheet" href="/app/perfil/perfil.css">
     <link rel="stylesheet" href="/app/login/estilos.css">
+    <link rel="stylesheet" href="/app/perfil/perfil.css">
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
+    <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
     <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
-    <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
+    <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
     <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
@@ -91,12 +91,12 @@
     <script src="/app/ambiental/app.directivas.js"></script>
     <script src="/app/ambiental/app.module.js"></script>
     <script src="/app/ambiental/app.route.js"></script>
-    <script src="/app/bienvenido/app.directive.js"></script>
-    <script src="/app/bienvenido/app.module.js"></script>
-    <script src="/app/bienvenido/app.route.js"></script>
     <script src="/app/calendario/app.module.js"></script>
     <script src="/app/calendario/app.route.js"></script>
     <script src="/app/config/app.constantes.js"></script>
+    <script src="/app/bienvenido/app.directive.js"></script>
+    <script src="/app/bienvenido/app.module.js"></script>
+    <script src="/app/bienvenido/app.route.js"></script>
     <script src="/app/configuracion/app.directive.js"></script>
     <script src="/app/configuracion/app.module.js"></script>
     <script src="/app/configuracion/app.route.js"></script>
@@ -104,25 +104,24 @@
     <script src="/app/email/app.services.js"></script>
     <script src="/app/footer/app.directivas.js"></script>
     <script src="/app/footer/app.module.js"></script>
+    <script src="/app/inicio/app.controller.js"></script>
+    <script src="/app/inicio/app.directivas.js"></script>
+    <script src="/app/inicio/app.module.js"></script>
+    <script src="/app/inicio/app.route.js"></script>
     <script src="/app/header/app.controller.js"></script>
     <script src="/app/header/app.directive.js"></script>
     <script src="/app/header/app.module.js"></script>
     <script src="/app/header/app.router.js"></script>
     <script src="/app/header/notificacion.js"></script>
     <script src="/app/header/showpanels.js"></script>
-    <script src="/app/inicio/animation.js"></script>
-    <script src="/app/inicio/app.controller.js"></script>
-    <script src="/app/inicio/app.directivas.js"></script>
-    <script src="/app/inicio/app.module.js"></script>
-    <script src="/app/inicio/app.route.js"></script>
-    <script src="/app/perfil/app.controller.js"></script>
-    <script src="/app/perfil/app.directive.js"></script>
-    <script src="/app/perfil/app.module.js"></script>
-    <script src="/app/perfil/app.route.js"></script>
     <script src="/app/login/app.controller.js"></script>
     <script src="/app/login/app.directive.js"></script>
     <script src="/app/login/app.module.js"></script>
     <script src="/app/login/app.router.js"></script>
+    <script src="/app/perfil/app.controller.js"></script>
+    <script src="/app/perfil/app.directive.js"></script>
+    <script src="/app/perfil/app.module.js"></script>
+    <script src="/app/perfil/app.route.js"></script>
     <script src="/app/portafolio/app.directivas.js"></script>
     <script src="/app/portafolio/app.module.js"></script>
     <script src="/app/portafolio/app.route.js"></script>
@@ -142,21 +141,21 @@
     <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.service.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.services.js"></script>
     <script src="/app/Usuarios/consulta/app.controller.js"></script>
     <script src="/app/Usuarios/consulta/app.directive.js"></script>
     <script src="/app/Usuarios/consulta/app.module.js"></script>
     <script src="/app/Usuarios/consulta/app.route.js"></script>
     <script src="/app/Usuarios/consulta/app.services.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.controller.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.directive.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.module.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.route.js"></script>
     <script src="/app/Usuarios/consultasList/app.controller.js"></script>
     <script src="/app/Usuarios/consultasList/app.directive.js"></script>
     <script src="/app/Usuarios/consultasList/app.module.js"></script>
     <script src="/app/Usuarios/consultasList/app.route.js"></script>
     <script src="/app/Usuarios/consultasList/app.services.js"></script>
+    <script src="/app/Usuarios/consultasCreate/app.controller.js"></script>
+    <script src="/app/Usuarios/consultasCreate/app.directive.js"></script>
+    <script src="/app/Usuarios/consultasCreate/app.module.js"></script>
+    <script src="/app/Usuarios/consultasCreate/app.route.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.controller.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
@@ -171,6 +170,10 @@
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
+    <script src="/app/Usuarios/citasmedicas/create/app.controller.js"></script>
+    <script src="/app/Usuarios/citasmedicas/create/app.directive.js"></script>
+    <script src="/app/Usuarios/citasmedicas/create/app.module.js"></script>
+    <script src="/app/Usuarios/citasmedicas/create/app.service.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 </body>
