--- a/source/app/header/header.html
+++ b/source/app/header/header.html
@@ -16,28 +16,43 @@
     <div id="MainMenuPrimary" class="navbar-collapse collapse">
 
       <!--Usuario Logeado-->
-      <ul class="nav navbar-nav navbar-right">
+
         <ul class="nav navbar-nav navbar-right" ng-show="vm.isAuthenticated()">
-          <div class="btn-group">
+          <div ng-show="vm.isAuthenticated()" onclick="showNotification()" class="Notifi">
+            <span class="fa fa-bell-o fa-2x iconoo-notification pulse"></span>
+          <div id="Notification" class="Notification z-depth-1" style="display:none;">
+            <p class="NotificationLabel">Tienes una nueva cita</p>
+          </div>
+        </div>
+
+            <li class="MenuDesplegable" onclick="Desplegable()" style="padding:.5em; margin-right:1em; cursor:pointer;" class="MainMenu-ListPanel">
+              {{vm.getCurrentUser()}} <span class="caret"></span>
+            </li>
+            <div class="Options z-depth-1" id="Option">
+              <li><a  class="fa fa-user icoon-user" href="#/perfil/{{vm.getIdCurrentUser()}}"> Mi Perfil</a></li>
+              <li><a class="fa fa-user-md icoon-user"  href="#/usuariosList" ng-show="!vm.isMedic()"> Médicos</a></li>
+              <li><a class="fa fa-list-ul icoon-user" href="#/consultasList"> Lista de consultas</a></li>
+              <li><a class="fa fa-cog" href="#/configuser/{{vm.getIdCurrentUser()}}"> Configuración</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a class="fa fa-sign-out icoon-user " href="#/"  ng-click="vm.logout()"> Cerrar Sesión</a></li>
+            </div>
+
+
+          <!-- <div class="btn-group">
             <button type="button"  style="padding:.5em; margin-right:1em;" class="btn btn-default dropdown-toggle button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
               {{vm.getCurrentUser()}} <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-              <li><a  class="fa fa-user " href="#/perfil/{{vm.getIdCurrentUser()}}">Mi Perfil</a></li>
-              <li><a class="fa fa-user-md "  href="#/usuariosList" ng-show="!vm.isMedic()">Médicos</a></li>
-              <li><a href="#/consultasList">Lista de consultas</a></li>
-              <li><a href="#/configuser/{{vm.getIdCurrentUser()}}">Configuración</a></li>
+              <li><a  class="fa fa-user icoon-user" href="#/perfil/{{vm.getIdCurrentUser()}}"> Mi Perfil</a></li>
+              <li><a class="fa fa-user-md icoon-user"  href="#/usuariosList" ng-show="!vm.isMedic()"> Médicos</a></li>
+              <li><a class="fa fa-list-ul icoon-user" href="#/consultasList"> Lista de consultas</a></li>
+              <li><a class="fa fa-cog" href="#/configuser/{{vm.getIdCurrentUser()}}"> Configuración</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#/"  ng-click="vm.logout()">Cerrar Sesión</a></li>
+              <li><a class="fa fa-sign-out icoon-user " href="#/"  ng-click="vm.logout()"> Cerrar Sesión</a></li>
             </ul>
-          </div>
+          </div> -->
         </ul>
-        <div ng-show="vm.isAuthenticated()" onclick="showNotification()" class="Notifi">
-  <span class="fa fa-bell-o fa-3x iconoo-notification pulse"></span>
-    <div id="Notification" class="Notification z-depth-1" style="display:none;">
-      <p class="NotificationLabel">Tienes una nueva cita</p>
-    </div>
-</div>
+<ul class="nav navbar-nav navbar-right">
 
 
 <!-- <div ng-controller="AppCtrl" layout="column" style="height:500px;" ng-cloak style="width:20%;display:inline-block;">
