--- a/source/index.html
+++ b/source/index.html
@@ -29,13 +29,13 @@
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
-    <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
-    <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
+    <link rel="stylesheet" href="/app/Usuarios/consultaadmin/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
+    <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
+    <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
-    <link rel="stylesheet" href="/app/calendario/calendario-list/calendario-list.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <!-- endinject -->
     <!-- endbuild -->
@@ -95,6 +95,8 @@
     <script src="/app/bienvenido/app.directive.js"></script>
     <script src="/app/bienvenido/app.module.js"></script>
     <script src="/app/bienvenido/app.route.js"></script>
+    <script src="/app/calendario/app.controller.js"></script>
+    <script src="/app/calendario/app.directivas.js"></script>
     <script src="/app/calendario/app.module.js"></script>
     <script src="/app/calendario/app.route.js"></script>
     <script src="/app/config/app.constantes.js"></script>
@@ -140,16 +142,10 @@
     <script src="/app/registro/app.services.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.services.js"></script>
-    <script src="/app/Usuarios/consulta/app.controller.js"></script>
-    <script src="/app/Usuarios/consulta/app.directive.js"></script>
-    <script src="/app/Usuarios/consulta/app.module.js"></script>
-    <script src="/app/Usuarios/consulta/app.route.js"></script>
-    <script src="/app/Usuarios/consulta/app.services.js"></script>
+    <script src="/app/Usuarios/consultaadmin/app.controller.js"></script>
+    <script src="/app/Usuarios/consultaadmin/app.directive.js"></script>
+    <script src="/app/Usuarios/consultaadmin/app.module.js"></script>
+    <script src="/app/Usuarios/consultaadmin/app.route.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.controller.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.directive.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.module.js"></script>
@@ -163,13 +159,21 @@
     <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.route.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.services.js"></script>
+    <script src="/app/Usuarios/consulta/app.controller.js"></script>
+    <script src="/app/Usuarios/consulta/app.directive.js"></script>
+    <script src="/app/Usuarios/consulta/app.module.js"></script>
+    <script src="/app/Usuarios/consulta/app.route.js"></script>
+    <script src="/app/Usuarios/consulta/app.services.js"></script>
     <script src="/app/Usuarios/usuariosList/app.controller.js"></script>
     <script src="/app/Usuarios/usuariosList/app.directive.js"></script>
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.controller.js"></script>
-    <script src="/app/calendario/calendario-list/calendario-list.directive.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
