--- a/source/index.html
+++ b/source/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="/app/admin/admin.css">
     <link rel="stylesheet" href="/app/ambiental/ambiental.css">
+    <link rel="stylesheet" href="/app/admin/admin.css">
     <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/configuracion/configuracion.css">
     <link rel="stylesheet" href="/app/footer/footer.css">
@@ -30,12 +30,11 @@
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
-    <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
-    <link rel="stylesheet" href="/app/Usuarios/consultaadmin/estilos.css">
-    <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
-    <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
+    <link rel="stylesheet" href="/app/consultas/consulta-create/consulta.css">
+    <link rel="stylesheet" href="/app/consultas/consultaadmin/estilos.css">
+    <link rel="stylesheet" href="/app/consultas/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <link rel="stylesheet" href="/app/Usuarios/citasmedicas/create/citacreate.css">
     <!-- endinject -->
@@ -84,15 +83,15 @@
     <!-- inject:js -->
     <script src="/app/app.module.js"></script>
     <script src="/app/templates.js"></script>
+    <script src="/app/ambiental/app.directivas.js"></script>
+    <script src="/app/ambiental/app.module.js"></script>
+    <script src="/app/ambiental/app.route.js"></script>
     <script src="/app/Usuarios/app.module.js"></script>
     <script src="/app/admin/app.controller.js"></script>
     <script src="/app/admin/app.directivas.js"></script>
     <script src="/app/admin/app.module.js"></script>
     <script src="/app/admin/app.route.js"></script>
     <script src="/app/admin/app.services.js"></script>
-    <script src="/app/ambiental/app.directivas.js"></script>
-    <script src="/app/ambiental/app.module.js"></script>
-    <script src="/app/ambiental/app.route.js"></script>
     <script src="/app/bienvenido/app.directive.js"></script>
     <script src="/app/bienvenido/app.module.js"></script>
     <script src="/app/bienvenido/app.route.js"></script>
@@ -104,6 +103,8 @@
     <script src="/app/configuracion/app.directive.js"></script>
     <script src="/app/configuracion/app.module.js"></script>
     <script src="/app/configuracion/app.route.js"></script>
+    <script src="/app/consultas/app.module.js"></script>
+    <script src="/app/consultas/app.services.js"></script>
     <script src="/app/email/app.module.js"></script>
     <script src="/app/email/app.services.js"></script>
     <script src="/app/footer/app.directivas.js"></script>
@@ -147,23 +148,6 @@
     <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
     <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
-    <script src="/app/Usuarios/consulta/app.controller.js"></script>
-    <script src="/app/Usuarios/consulta/app.directive.js"></script>
-    <script src="/app/Usuarios/consulta/app.module.js"></script>
-    <script src="/app/Usuarios/consulta/app.route.js"></script>
-    <script src="/app/Usuarios/consultaadmin/app.controller.js"></script>
-    <script src="/app/Usuarios/consultaadmin/app.directive.js"></script>
-    <script src="/app/Usuarios/consultaadmin/app.module.js"></script>
-    <script src="/app/Usuarios/consultaadmin/app.route.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.controller.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.directive.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.module.js"></script>
-    <script src="/app/Usuarios/consultasCreate/app.route.js"></script>
-    <script src="/app/Usuarios/consultasList/app.controller.js"></script>
-    <script src="/app/Usuarios/consultasList/app.directive.js"></script>
-    <script src="/app/Usuarios/consultasList/app.module.js"></script>
-    <script src="/app/Usuarios/consultasList/app.route.js"></script>
-    <script src="/app/Usuarios/consultasList/app.services.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.controller.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
@@ -173,6 +157,18 @@
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
+    <script src="/app/consultas/consulta-create/app.controller.js"></script>
+    <script src="/app/consultas/consulta-create/app.directive.js"></script>
+    <script src="/app/consultas/consulta-create/app.module.js"></script>
+    <script src="/app/consultas/consulta-create/app.route.js"></script>
+    <script src="/app/consultas/consultaadmin/app.controller.js"></script>
+    <script src="/app/consultas/consultaadmin/app.directive.js"></script>
+    <script src="/app/consultas/consultaadmin/app.module.js"></script>
+    <script src="/app/consultas/consultaadmin/app.route.js"></script>
+    <script src="/app/consultas/consultasList/app.controller.js"></script>
+    <script src="/app/consultas/consultasList/app.directive.js"></script>
+    <script src="/app/consultas/consultasList/app.module.js"></script>
+    <script src="/app/consultas/consultasList/app.route.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
