--- a/source/app/consultas/consultaadmin/consultaadmin.html
+++ b/source/app/consultas/consultaadmin/consultaadmin.html
@@ -1,12 +1,11 @@
 
-<div class="div-consulta">
-  <div id="v">
-    <md-divider></md-divider>
-    <md-subheader class="md-no-sticky">Consultas Creadas</md-subheader>
-    <md-divider></md-divider>
-    <md-list-item ng-repeat="consulta in vm.consultas" class="noright">
-      <md-icon class="fa fa-question-circle-o icono"></md-icon>
-      <p>{{consulta.descripcion}}</p>
-    </md-list-item>
-  </div>
-</div> 
+<md-list  ng-cloak >
+  <div ng-repeat="consulta in vm.consultas" class="list-consulta">
+  <md-list-item class="secondary-button-padding">
+    <p>{{consulta.descripcion}}</p>
+    <md-icon  ng-click="doSecondaryAction($event)" class="fa fa-comments"></md-icon>
+  </md-list-item>
+  <md-divider></md-divider>
+</div>
+
+</md-list>
