perfil subir foto

--- a/source/app/header/header.html
+++ b/source/app/header/header.html
@@ -32,7 +32,7 @@
             <div class="Options z-depth-1" id="Option">
               <li><a  class="fa fa-user icoon-user " style="border-bottom: 1px solid #2271b3; width:110%;" href="#/perfil/{{vm.getIdCurrentUser()}}"> Mi Perfil</a></li>
               <li><a class="fa fa-user-md icoon-user" style="border-bottom: 1px solid #2271b3; width:110%;"  href="#/consulta-create" ng-show="!vm.isMedic()"> Consultas</a></li>
-              <li><a class="fa fa-list-ul icoon-user" style="border-bottom: 1px solid #2271b3; width:110%;" href="#/consultasList"> Lista de consultas</a></li>
+              <li><a class="fa fa-list-ul icoon-user" style="border-bottom: 1px solid #2271b3; width:110%;" href="#/consultaadmin"> Lista de consultas</a></li>
               <li><a class="fa fa-cog" style="border-bottom: 1px solid #2271b3; width:110%;" href="#/configuser/{{vm.getIdCurrentUser()}}"> Configuración</a></li>
               <li><a class="fa fa-sign-out icoon-user " href="#/"  ng-click="vm.logout()"> Cerrar Sesión</a></li>
             </div>
