--- a/source/app/perfil/perfil.html
+++ b/source/app/perfil/perfil.html
@@ -8,10 +8,10 @@
   <form class="usuarioPerfil">
     <figure class="FormPerfil-img">
      <div class="photo">
+       <img ng-if="vm.usuario.avatar" ng-src="{{'data:image/png;base64,' + vm.usuario.avatar}}" width="150px" height="150px" style="border-radius: 51%;"/>
 <button class="boton"><label style="color:white;" for="foto-input">Subir Foto</label></button>
 <input type="file" id="foto-input" on-read-img="vm.loadFoto($fileContent)">
 </div>
-<img ng-if="vm.usuario.avatar" ng-src="{{'data:image/png;base64,' + vm.usuario.avatar}}" width="150px" height="150px"/>
    </figure>
 
 
