--- a/source/app/footer/footer.html
+++ b/source/app/footer/footer.html
@@ -1,21 +1,22 @@
 <footer class="Footer">
   <div class="Footer-left">
-    <ul class="Footer-List visita">
+    <div class="Footer-List visita">
       <a class="Footer-item Footer-item-Bold aboud">ACERCA DE LA COMPAÑÍA</a><br>
       <p class="Footer-descripcion">Somos una compañia encargada de agilizar los procesos de consultas medicas.</p>
-    </ul>
-    <ul class="Footer-List contactos">
+    </div>
+    <div class="Footer-List contactos">
       <a class="Footer-item Footer-item-Bold ">CONTÁCTANOS</a><br>
       <p class=" footer-email">pocketmedic@gmail.com</p><br>
       <a class="icon-facebook3" href="https://www.facebook.com/"></a>
       <a class="icon-twitter3" href="https://twitter.com/"></a>
       <a class="icon-instagram" href="https://www.instagram.com/"></a>
       <a class="icon-youtube" href="https://www.youtube.com/"></a><br>
-    </ul>
-    <ul class="Footer-List about">
+    </div>
+    <div class="Footer-List about">
       <a class="Footer-item Footer-item-Bold conocenos">DOCUMENTACION</a><br>
       <a href="#/portafolio" class="MainMenu-footer">Portafolio de servicios</a><br>
       <a href="#/citamedica" class="MainMenu-footer">Politica de privacidad</a><br>
       <a href="#/ambiental" class="MainMenu-footer">Punto ambiental</a><br><br><br>
-    </ul>
+    </div>
+  </div>
   </footer>
