--- a/source/app/inicio/inicio.html
+++ b/source/app/inicio/inicio.html
@@ -8,30 +8,30 @@
          <!--button class="Buttom-slider" href="#/registro">Registrate</button>-->
     </div>
  </div>
- <div class="altWrap">
-  <aside class="heal">
+ <section class="altWrap">
+  <!-- <div class="heal">
     <img class="care1" src="../../img/angelica.jpg" alt="" />
-  </aside>
+  </div> -->
  	  <div class="container">
  		  <div class="row">
- 				<div class="col-xs-12">
- 					<h2 class="sectionTitle">¿Quienes somos?</h2>
+ 				<div class="col-md-12">
+ 					<h2 class="sectionTitleInicio">¿Quienes somos?</h2>
  				</div><br>
  			</div>
-      <div class="Portafolio">
+      <!-- <div class="Portafolio"> -->
         <div class="row IdentityMajor-container">
-          <div class="col-md-4 portafoliocontainer">
+          <div class="col-md-4">
             <h3 class="portafoliocontainer-Title">Misión</h3>
              <p class="text">Nuestra mision es ser conocidos por nuestro liderazgo atravez de nuestra pasion,
                nuestro respeto por la diversidad y nuestro compromiso para el crecimiento personal tanto en su carrera como en lo personal.</p>
-          </div><br>
-          <div class="col-md-4 portafoliocontainer">
+          </div>
+          <div class="col-md-4">
             <h3 class="portafoliocontainer-Title">Visión</h3>
              <p class="text">Pocket Medic, tiene como vision que en el 2020 podamos extendernos mundialmente,
                haciendo que el servicio de la salud mejore y tengamos una mejor atencion al cliente,
                asi mismo agilizando los procesos de las consultas medicas.</p>
-          </div><br>
-          <div class="col-md-4 portafoliocontainer">
+          </div>
+          <div class="col-md-4">
             <h3 class="portafoliocontainer-Title">Valores</h3>
               <p class="text"> Hemos identificado un conjunto de valores tales como:
                    El Respeto
@@ -40,11 +40,11 @@
                    La Honestidad
                    La Solidaridad
                    Pasion comprometidos por la salud.</p>
-          </div><br>
+          </div>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
-</div>
+</section>
        <!-- <div class="Elegirnos">
          <div class="container">
              <div class="row">
@@ -62,45 +62,45 @@
              </div>
             </div>
        </div> -->
-       <div class="container-Equipo">
-         <h1 class="Tittle">Conoce Nuestras Especialidades</h1>
+       <div class="container-fluid container-Equipo">
+         <h1 class="TittleInicio">Conoce Nuestras Especialidades</h1>
          <div class="row">
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
                <img class="picture" src="../../img/optometria.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Optometria</h3>
              <!-- <p class="Description">Programador</p> -->
            </div>
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
               <img class="picture" src="../../img/pediatria.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Pediatria</h3>
              <!-- <p class="Description">Diseñador</p> -->
            </div>
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
               <img class="picture" src="../../img/medico general.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Medico General</h3>
              <!-- <p class="Description">Programador</p> -->
            </div>
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
               <img class="picture" src="../../img/urologia.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Urologia</h3>
              <!-- <p class="Description">Base de datos</p> -->
            </div>
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
                <img class="picture" src="../../img/cardiologia.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Cardiologia</h3>
              <!-- <p class="Description">Diseñadora</p> -->
            </div>
-           <div class="col-md-2">
+           <div class="col-sm-6 col-md-2">
              <div class="Equipoimage-container">
                <img class="picture" src="../../img/dermatologia.jpg" alt="" width="100" />
              </div>
